Reduce warnings for Hybridcontroller